--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
         {
-            "source": "*",
+            "source": "/",
             "destination": "https://snt-starter.webflow.io"
           },
       {
