--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,7 @@
 {
-    "rewrites": [
-     
-      {
-        "source": "/api/:path*",
-        "destination": "/api/:path*"
-      },
-      {
-        "source": "/dashboard",
-        "destination": "https://deine-webflow-domain.com/dashboard"
-      },
-      {
-        "source": "/profile",
-        "destination": "https://deine-webflow-domain.com/profile"
-      },
-      {
-        "source": "/:path*",
-        "destination": ""
-      }
-    ]
+  "build": {
+    "env": {
+      "WEBFLOW_PASSWORD": "@webflow-password"
+    }
   }
-  
+}
