--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,27 @@
 {
-    "rewrites": [
-     
-      {
-        "source": "/api/:path*",
-        "destination": "/api/:path*"
-      },
-      {
-        "source": "/dashboard",
-        "destination": "https://deine-webflow-domain.com/dashboard"
-      },
-      {
-        "source": "/profile",
-        "destination": "https://deine-webflow-domain.com/profile"
-      },
-      {
-        "source": "/:path*",
-        "destination": ""
-      }
-    ]
-  }
-  
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    },
+    {
+      "source": "/:path*",  
+      "destination": "https://snt-starter.webflow.io/:path*"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/:path*",
+      "headers": [
+        {
+          "key": "Host",
+          "value": "snt-starter.webflow.io"  
+        },
+        {
+          "key": "Authorization",
+          "value": "Basic $(echo -n ':Nuhadt123' | base64)"  }
+          
+      ]
+    }
+  ]
+}
