--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,8 @@
 {
-  "version": 2,
-  "builds": [{ "src": "package.json", "use": "@vercel/next" }],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "https://snt-starter.webflow.io/$1",
-      "headers": {
-        "Host": "snt-starter.webflow.io",
-        "Authorization": "Basic bnVoYWR0MTIzOg==",
-        "Accept": "text/html",
-        "Cache-Control": "no-cache"
-      }
+      "source": "/(.*)",
+      "destination": "/api/proxy"
     }
   ]
 }
