--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "http-proxy": "^1.18.1",
     "next": "latest",
+    "node-fetch": "^3.3.2",
     "react": "latest",
     "react-dom": "latest"
   },
