--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
     "http-proxy": "^1.18.1",
     "next": "latest",
     "node-fetch": "^3.3.2",
